--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -50,4 +50,7 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 }
 
 /* Ejercicio 6. */
+#ejercicioSiete {
+    align-items: flex-end;
+}
 
