--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,12 +1,24 @@
-h1 {color: red;}
-            img {width: 400px;}
-            #thirdDiv
-            {
-            height: 600px; 
-            width: 500px; 
-            background-color: saddlebrown; 
-            padding: 50px;
-            border: 5px solid black
-            ;}
-            #spanID {font-size: 18px; margin: 50px;}
+h1 {color: greenyellow;
+    background-color: gray;}
+h3 {
+    color: gray;
+    font-size: 50px;
+}
+ img 
+{
+    width: 400px;
+}
+#thirdDiv
+{
+    height: 600px; 
+    width: 500px; 
+    background-color: blue; 
+    padding: 50px;
+    border: 5px solid black
+;}
+#spanID 
+{
+    font-size: 18px; margin: 50px;
+}
+
             
